RavenDB-21447 Fix test container overlapping Info Hub

--- a/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/etl.less
@@ -594,7 +594,7 @@
     .test-container {
         position: absolute;
         right: 0;
-        top: 0;
+        top: @gutter-xl;
         bottom: 0;
         width: 50%;
         transform: translateX(100%);
@@ -635,7 +635,7 @@
     .test-container {
         position: absolute;
         right: 0;
-        top: 0;
+        top: @gutter-xl;
         bottom: 0;
         width: 50%;
         transform: translateX(100%);
@@ -676,7 +676,7 @@
     .test-container {
         position: absolute;
         right: 0;
-        top: 0;
+        top: @gutter-xl;
         bottom: 0;
         width: 50%;
         transform: translateX(100%);
@@ -717,7 +717,7 @@
     .test-container {
         position: absolute;
         right: 0;
-        top: 0;
+        top: @gutter-xl;
         bottom: 0;
         width: 50%;
         transform: translateX(100%);
@@ -758,7 +758,7 @@
     .test-container {
         position: absolute;
         right: 0;
-        top: 0;
+        top: @gutter-xl;
         bottom: 0;
         width: 50%;
         transform: translateX(100%);
